# adas-system

./: README.md
adas-client/: .gitignore  README.md  package-lock.json  package.json  server.js
adas-client/src/app/: page.tsx
adas-client/src/components/: OverlayCanvas.tsx
adas-client/src/hooks/: useCamera.ts  useGPS.ts  useSensorStream.ts  useWebSocket.ts
adas-client/src/lib/: wsCodec.ts
adas-client/src/types/: autonomy.ts  index.ts  protocol.ts  sensor.ts
adas-client/src/utils/: draw.ts
autonomy-server/: README.md  download.py
autonomy-server/src/: camera_api.py  demo.py
autonomy-server/src/adas/control/: mpcv2.py
autonomy-server/src/inference/: object_engine.py  tensorrt_engine.py  trt_object_engine.py
autonomy-server/src/static/: index.html
autonomy-server/src/test/: benchmark.py  debug_engine.py  test_infer.py  test_model.py  test_model_trt.py  test_trt_infer.py  test_video.py  trt_object_test.py  trt_yolop_test.py
autonomy-server/src/utils/: image.py
demo-server/: .gitignore  autonomy_demo.py  cmd.txt  image_utils.py  main.py  models.py  pyproject.toml  ws_codec.py
