[project]
name = "demo-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.125.0",
    "msgpack>=1.1.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
